--- a/man/suncg14.man
+++ b/man/suncg14.man
@@ -1,6 +1,6 @@
 .\" shorthand for double quote that works everywhere.
 .ds q \N'34'
-.TH SUNCG14 __drivermansuffix__ __vendorversion__
+.TH SUNCG14 4 2022-12-09 __vendorversion__
 .SH NAME
 suncg14 \- CG14 video driver
 .SH SYNOPSIS
@@ -13,19 +13,24 @@ suncg14 \- CG14 video driver
 .fi
 .SH DESCRIPTION
 .B suncg14
-is an __xservername__ driver for Sun CG14 frame buffers.
+is an Xorg driver for Sun CG14 frame buffers.
 THIS MAN PAGE NEEDS TO BE FILLED IN.
 .SH SUPPORTED HARDWARE
 The
 .B suncg14
-driver supports the built-in frame buffer in the SPARCstation 10SX
-and SPARCstation 20 workstations.  This frame buffer requires the
-installation of one or more VSIMMs in the workstation to be operational.
+driver supports the built-in frame buffer in the Sun SPARCstation 10SX
+and SPARCstation 20 workstations.
+This frame buffer requires the installation of one or more VSIMMs
+in the workstation to be operational.
 .SH CONFIGURATION DETAILS
-Please refer to __xconfigfile__(__filemansuffix__) for general configuration
-details.  This section only covers configuration details specific to this
-driver.
+Please refer to
+.BR xorg.conf (5)
+for general configuration details.
+This section only covers configuration details specific to this driver.
 .SH "SEE ALSO"
-__xservername__(1), __xconfigfile__(__filemansuffix__), Xserver(1), X(__miscmansuffix__)
+.BR Xorg (1),
+.BR Xserver (1),
+.BR xorg.conf (5),
+.BR X (7)
 .SH AUTHORS
 Authors include: Jakub Jelinek <jakub@redhat.com>
