man: replace Xorg by XLibre
Signed-off-by: Enrico Weigelt, metux IT consult <info@metux.net>

--- a/man/suncg14.man
+++ b/man/suncg14.man
@@ -13,7 +13,7 @@ suncg14 \- CG14 video driver
 .fi
 .SH DESCRIPTION
 .B suncg14
-is an Xorg driver for Sun CG14 frame buffers.
+is an XLibre driver for Sun CG14 frame buffers.
 THIS MAN PAGE NEEDS TO BE FILLED IN.
 .SH SUPPORTED HARDWARE
 The
@@ -28,7 +28,7 @@ Please refer to
 for general configuration details.
 This section only covers configuration details specific to this driver.
 .SH "SEE ALSO"
-.BR Xorg (1),
+.BR XLibre (1),
 .BR Xserver (1),
 .BR xorg.conf (5),
 .BR X (7)
